# cluster_editing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  experiments-girg.ipynb  experiments1.ipynb  experiments2.ipynb  experiments3.ipynb  girg.csv  make.sh  make_submission.sh  pace_instances.csv
cluster_editing/: CMakeLists.txt  data_path.h.in  definitions.h  flat.cpp  flat.h  macros.h  metrics.h  multilevel.cpp  multilevel.h  preprocessing.cpp  preprocessing.h
cluster_editing/application/: CMakeLists.txt  calc_cost.cc  cluster_editing.cc  compute_lower_bounds.cc  draw_graph.cc  evolutionary.cc  exact.cc  exact_parameter_tuning.cc  heuristic.cc  test_exact_matches_previous_results.cc  test_reductions.cc  time_all.cc
cluster_editing/coarsening/: CMakeLists.txt  do_nothing_coarsener.h  i_coarsener.h  lp_coarsener.cpp  lp_coarsener.h
cluster_editing/context/: CMakeLists.txt  context.cpp  context.h  context_enum_classes.cpp  context_enum_classes.h
cluster_editing/datastructures/: CMakeLists.txt  adjacency_row.cpp  adjacency_row.h  fast_reset_flag_array.h  graph.cpp  graph.h  graph_common.h  graph_factory.cpp  graph_factory.h  pq.h  sparse_map.h  spin_lock.h
cluster_editing/evolutionary/: CMakeLists.txt  evolutionary.cpp  evolutionary.h
cluster_editing/exact/: CMakeLists.txt  instance.cpp  instance.h  kab_bounds.cpp  kab_bounds.h  lower_bounds.cpp  lower_bounds.h  reductions.cpp  reductions.h  solver.cpp  solver.h  star_bound.cpp  star_bound.h  thomas.cpp  thomas.h
cluster_editing/exact/simple_reductions/: reductions  reductions.cpp  reductions.sh
cluster_editing/exact/simple_reductions/graphs/: exact001.gr.metis  exact001.gr.metis.cluster  exact003.gr  exact003.gr.metis  exact005.gr  exact005.gr.metis  exact007.gr.metis  exact009.gr  exact009.gr.metis  exact011.gr.metis  exact013.gr  exact013.gr.metis  exact015.gr  exact015.gr.metis  exact017.gr.metis  exact019.gr  exact019.gr.metis  exact021.gr.metis  exact023.gr  exact023.gr.metis  exact025.gr.metis  exact027.gr  exact027.gr.metis  exact029.gr.metis  exact031.gr.metis  exact033.gr  exact033.gr.metis  exact035.gr.metis  exact037.gr.metis  exact039.gr  exact039.gr.metis  exact041.gr.metis  exact043.gr  exact043.gr.metis  exact045.gr  exact045.gr.metis  exact047.gr.metis  exact049.gr.metis  exact051.gr  exact051.gr.metis  (+115 more)
cluster_editing/exact/simple_reductions/reductions.dSYM/Contents/: Info.plist
cluster_editing/exact/simple_reductions/reductions.dSYM/Contents/Resources/DWARF/: reductions
cluster_editing/experiments/: CMakeLists.txt  gexp.cc  main.cc
cluster_editing/heuristic/: CMakeLists.txt  action_selector.h  clique_remover.cpp  clique_remover.h  clique_splitter.cpp  clique_splitter.h  clustering.cpp  clustering.h  do_nothing_refiner.h  evolutionary.cpp  evolutionary.h  fm_refiner.cpp  fm_refiner.h  i_refiner.h  localized_evo.cpp  localized_evo.h  lp_refiner.cpp  lp_refiner.h  mutation.h  node_swapper.cpp  node_swapper.h  stopping_rule.h
cluster_editing/io/: CMakeLists.txt  colors.cpp  colors.h  command_line_options.cpp  command_line_options.h  draw_graph.cpp  draw_graph.h  graph_io.cpp  graph_io.h  ipe.cpp  ipe.h  output.cpp  output.h
cluster_editing/refinement/: CMakeLists.txt  clique_remover.cpp  clique_remover.h  clique_splitter.cpp  clique_splitter.h  do_nothing_refiner.h  evolutionary.cpp  evolutionary.h  exact_refiner.cpp  exact_refiner.h  fm_refiner.cpp  fm_refiner.h  i_refiner.h  localized_evo.cpp  localized_evo.h  lp_refiner.cpp  lp_refiner.h  mutation.h  node_swapper.cpp  node_swapper.h  pseudo_fm.cpp  pseudo_fm.h  stopping_rule.h  swap_refiner.cpp  swap_refiner.h
cluster_editing/utils/: common_operations.h  logger.h  math.h  progress_bar.h  randomize.h  range.h  timer.h
config/: exact.ini  fast.ini  flat.ini  multilevel.ini  preset.ini  strong.ini
instance_exploration/: deg_distr.R  deg_variance.R  graph_exploration.py  helper.R  plotting.R  rremove.R
instances/: .gitignore  download_coords.sh  download_instances.sh
peace_cluster_editing/: .gitignore  CMakeLists.txt  README.md  peace.py  time_all.py
peace_cluster_editing/data/: c1.cm  c2.cm
peace_cluster_editing/src/: almostclique.h  array.h  cc-kernel.h  costsgraph.h  criticalclique.h  edgereduction.cpp  edgereduction.h  graphset.cpp  mergereduction.h  mincut.h  napsack.h  searchtreeweighted.cpp  trianglematrix.h  vertexlists.h  weightedprobleminstance.cpp  weightedprobleminstance.h
peace_cluster_editing/src/CostsParser/: blastparser.cpp  blastparser.h  doubleparser.cpp
peace_cluster_editing/src/Exceptions/: graphexception.cpp  graphexception.h  probleminstanceexception.cpp  probleminstanceexception.h  vertexlistsexception.h
peace_cluster_editing/src/GraphParser/: edgefileparser.h  matrixparser.h
peace_cluster_editing/tester/: cckerneltester.cpp  weightedclustereditingtester.cpp  weightedclustereditingtesteriwpec.cpp
peace_cluster_editing/tools/: ReducedGraphProducer.cpp  ReducedGraphProducer_iwpec.cpp  criticalcliquereduction.cpp  graphvizcreator.cpp  searchtreetest.cpp  stopwatch.h  weightedclusterediting.cpp  weightedclusterreduction.cpp
prototypes/: Star-Bound.ipynb  star_bound.py
results/: 2021-02-19-star_bound.csv  2021-02-23-star_bound.csv  2021-03-02-star_bound.csv  2021-03-22-reduction_results.csv  2021-03-23-exact_with_star_bound.csv  2021-03-24-reduction_results.csv  2021-04-04-reduction-results.csv  2021_03_15_reduction_results.csv  exact-peace.csv  exact-weighted-f-free-edge-editing.csv  exact_unweighted.csv  exact_unweighted_full_data.csv  heur-2021-02-18-summary.csv  heur-2021-02-18.csv  upper_bounds_fm_flat_repeat_new.csv  upper_bounds_lp_flat_repeat_new.csv  upper_bounds_lp_multilevel.csv
src/: Makefile  almostclique.h  array.h  bnmanager.h  cc-kernel.h  costsgraph.cpp  costsgraph.h  criticalclique.h  edgereduction.cpp  edgereduction.h  graphexception.cpp  graphexception.h  graphset.cpp  graphset.h  lowerbound.h  mergereduction.h  (+13 more)
tests/: CMakeLists.txt  run_tests.cpp
tests/datastructures/: CMakeLists.txt  adjacency_row_test.cpp  graph_test.cc
tests/exact/: CMakeLists.txt  reduction_test.cc
(+188 files in other folders)
